force-app/main/default/objects/Opportunity/fields/Case_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Settlement_Date__c</fullName>
    <label>Case Settlement Date</label>
    <type>Date</type>
</CustomField>