force-app/main/default/objects/Opportunity/fields/Date_Referred__c.field-meta.xml
<CustomField>
    <fullName>Date_Referred__c</fullName>
    <label>Date Referred</label>
    <type>Date</type>
</CustomField>