force-app/main/default/objects/Opportunity/fields/Injury_Description__c.field-meta.xml
<CustomField>
    <fullName>Injury_Description__c</fullName>
    <label>Injury Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>