force-app/main/default/objects/Opportunity/fields/Lien_Signed__c.field-meta.xml
<CustomField>
    <fullName>Lien_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lien Signed?</label>
    <type>Checkbox</type>
</CustomField>