force-app/main/default/objects/Opportunity/fields/Medical_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Medical_Case_Status__c</fullName>
    <label>Medical Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eval</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>MMI</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>