force-app/main/default/objects/Opportunity/fields/Medical_Services_Provided__c.field-meta.xml
<CustomField>
    <fullName>Medical_Services_Provided__c</fullName>
    <label>Medical Services Provided</label>
    <length>255</length>
    <type>Text</type>
</CustomField>