force-app/main/default/objects/Opportunity/fields/Outstanding_Lien_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Lien_Amount__c</fullName>
    <label>Outstanding Lien Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>