force-app/main/default/objects/Opportunity/fields/Patient_Source__c.field-meta.xml
<CustomField>
    <fullName>Patient_Source__c</fullName>
    <label>Patient Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>