force-app/main/default/objects/Opportunity/fields/Payment_Collected__c.field-meta.xml
<CustomField>
    <fullName>Payment_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Collected</label>
    <type>Checkbox</type>
</CustomField>