force-app/main/default/objects/Opportunity/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Details</relationshipLabel>
    <relationshipName>Patient_Details</relationshipName>
    <type>Lookup</type>
</CustomField>